Обновление приложений/src/Task2/deploy-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-deployment-v1
  template:
    metadata:
      labels:
        app: nginx-deployment-v1
    spec:
      containers:
        - name: nginx
          image: nginx:1.19
          ports:
            - containerPort: 80
          volumeMounts:
          - name: nginx-content
            mountPath: /usr/share/nginx/html
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d/
      volumes:
        - name: nginx-content
          configMap:
            name: nginx-config-v1
            items:
              - key: index.html
                path: index.html
        - name: nginx-conf
          configMap:
            name: nginx-config-v1
            items:
            - key: default.conf
              path: default.conf
