Обновление приложений/src/Task2/service-v1.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-v1
spec:
  selector:
    app: nginx-deployment-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
