Обновление приложений/src/Task2/service-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-v2
spec:
  selector:
    app: nginx-deployment-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
