Обновление приложений/src/Task2/Ingress-v1.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-primary
spec:
  rules:
  - host: nginxtest.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-v1
            port:
              number: 80
